--- a/Doogether/package.json
+++ b/Doogether/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-modal": "^11.5.3",
+    "react-native-paper": "^3.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
